# ZERO_WASTE_BACKEND

./: .env  .gitignore  alembic.ini  database.db  database.sqlite  main.py  pyproject.toml
app/: config.py  crud.py  db.py  deps.py  models.py  schemas.py  utils.py
app/api/: main.py
app/api/general_pages/: route_homepage.py
app/api/routes/: Admin.py  auth.py  booking.py  forget_password.py  items.py  login.py  payment.py  reviews.py  test_token.py  users.py
app/email-templates/: reset_password.html  verify_email.html
app/templates/general_pages/: homepage.html
app/templates/shared/: base.html
imgrations/: Untitled-2  env.py
imgrations/versions/: 13adf31ea70e_profile_picture.py  350c30a61f0f_updated_user_and_waste_model.py  399c920dc6bf_added_profile_picture.py  40cffc3710cb_deleted_power_column.py  621e7cd8c93a_updated_waste_model.py  8b8ce558c252_added_is_staff_and_is_active_in_the_.py  c54917f1f3e0_alembic_setup.py  c9b625dc1e06_change_the_amount_column.py  e1c27b1aa194_updated_waste_model.py
