[tool.poetry]
name = "zer0-waste"
version = "0.1.0"
description = "ZERO_WASTE_MANAGEMENT"
authors = ["NWOLU DAVID"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
passlib = "^1.7.4"
tenacity = "^8.2.3"
pydantic = {extras = ["email"], version = "^2.7.0"}
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
psycopg = "^3.1.18"
pydantic-settings = "^2.2.1"
sentry-sdk = "^1.45.0"
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.34"
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
uuid = "^1.30"
bcrypt = "^4.1.2"
jinja2 = "^3.1.3"
emails = "^0.6"
boto3 = "^1.34.91"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
